# SerialPortTool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SerialPortTool.pro  main.cpp
snap/: snapcraft.yaml
sptsrc/: main.cpp  port_control.cpp  port_control.h
src/: main.cpp  port_control.cpp  port_control.h
